.kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: community-frontend
  template:
    metadata:
      labels:
        app: community-frontend
    spec:
      containers:
        - image: harbor.arsolitt.tech/community42/frontend:v0.19
          name: frontend
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 15
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 2342
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
      securityContext:
        fsGroup: 2342
        runAsGroup: 2342
        runAsUser: 2342
      terminationGracePeriodSeconds: 30
