.kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-frontend
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: community-frontend
  type: ClusterIP
